<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registreren_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- menu -->
    <LinearLayout
        android:id="@+id/registreren_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        >
    </LinearLayout>

    <!-- Registreren input fields -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registreren_instructionsText"
            android:layout_gravity="left"
            />
        <EditText
            android:id="@+id/registreren_voornaamTextfield"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registreren_voornaamTextfield_hint"
         />
        <TextView
            android:id="@+id/registreren_voornaam_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registreren_voornaam_errorText"
            android:textColor="#FF0000"
            android:layout_gravity="right"
            android:visibility="visible"
            />
        <EditText
            android:id="@+id/registreren_naamTextfield"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registreren_naamTextfield_hint"
            />
        <TextView
            android:id="@+id/registreren_naam_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registreren_naam_errorText"
            android:textColor="#FF0000"
            android:layout_gravity="right"
            android:visibility="visible"
            />
        <EditText
            android:id="@+id/registreren_emailTextfield"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registreren_emailTextfield_hint"
            />
        <TextView
            android:id="@+id/registreren_email_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registreren_email_errorText"
            android:textColor="#FF0000"
            android:layout_gravity="right"
            android:visibility="visible"
            />
        <EditText
            android:id="@+id/registreren_wachtwoordTextfield"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registreren_wachtwoordTextfield_hint"
            />
        <TextView
            android:id="@+id/registreren_wachtwoord_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registreren_wachtwoord_errorText"
            android:textColor="#FF0000"
            android:layout_gravity="right"
            android:visibility="visible"
            />
        <EditText
            android:id="@+id/registreren_wachtwoordBevestigenTextfield"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registreren_wachtwoordBevestigenTextfield_hint"
            />
        <TextView
            android:id="@+id/registreren_wachtwoordBevestigen_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registreren_wachtwoordBevestigen_errorText"
            android:textColor="#FF0000"
            android:layout_gravity="right"
            android:visibility="visible"
            />
        </LinearLayout>

    <!-- Button -->
    <Button
        android:id="@+id/registreren_nextButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/registreren_nextButton_text"
        android:layout_marginTop="16dp"
        />

</LinearLayout>