<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registreren_optional_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- menu -->
    <LinearLayout
        android:id="@+id/registreren_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        >
    </LinearLayout>

    <!-- Registreren input fields -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registreren_optional_instructionsText"
            android:layout_gravity="left"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/registreren_straatTextfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/registreren_straatTextfield_hint"
                />
            <EditText
                android:id="@+id/registreren_busTextfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/registreren_busTextfield_hint"
                />
            </LinearLayout>
        <EditText
            android:id="@+id/registreren_huisnummerTextfield"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registreren_huisnummerTextfield_hint"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/registreren_postcodeTextfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/registreren_postcodeTextfield_hint"
                />
            <EditText
                android:id="@+id/registreren_stadTextfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/registreren_stadTextfield_hint"
                />
            </LinearLayout>
        <TextView
            android:id="@+id/registreren_woonplaats_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registreren_woonplaats_errorText"
            android:textColor="#FF0000"
            android:layout_gravity="right"
            android:visibility="visible"
            />
        <EditText
            android:id="@+id/registreren_telefoonTextfield"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registreren_telefoonTextfield_hint"
            />
        <TextView
            android:id="@+id/registreren_telefoon_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registreren_telefoon_errorText"
            android:textColor="#FF0000"
            android:layout_gravity="right"
            android:visibility="visible"
            />
    </LinearLayout>

    <!-- Button -->
    <Button
        android:id="@+id/registreren_registrerenButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/registreren_registrerenButton_text"
        android:layout_marginTop="16dp"
        />

</LinearLayout>